        Calum Mackay for reporting this bug)
   - Feature: Applet and Popup now can be set to be sticky and be kept above all
        other windows
   - Bugfixes: Better error handling and bad connection handling (IMAP4;
        thanks to Byron Foster for providing a patch)
   - Bugfix: Corrected tests for responses to IDLE and SEARCH NOT SEEN
        commands (IMAP4)
   - Cleanup of SEARCH NOT SEEN, CAPABILITY, FETCH header commands (IMAP4)
   - Bugfix: Segfaulting in SSL when writing to a closed socket
   - Cleanup of code for obtaining the password for distant mailboxes
   - Cleanup of code for checking for new mails (IMAP4)
   - Bugfix: Signal SIGCHLD interrupts socket reads (thanks to Byron
        Foster for providing patches)
   - Bugfix: Some error handling was only done when debugging was activated
   - Bugfix: CAPABILITY command (IMAP4)
   - Cleanup of code for getting server's acknowledgment (IMAP4)
   - Bugfix: LOGINDISABLED capability respected (IMAP4)

Version 2.1.0
 * Nicolas Rougier
   - New & simpler interface
   - Support of the IDLE state for imap4 (no more polling)
   - Support of the FAM (File Alteration Monitor)
     (no more polling for file/folder protocols)
   - Better detection of mailbox format
   - Bugfix: IMAP4 idle state test to avoid checking twice
   - Bugfix: Popup was shown on exiting preferences
   - Put back credits
   - Updated French translations
   - Fix a bug with IMAP4 idle feature (not recognizing the BYE command)
   - Added a TODO file to keep track of features/bugs to be implemented/fixed
   - Bugfix: Testing of "\"text\" \"plain\"" in imap4 parsing was wrong
             (some servers answer using upper cases letter)
   - Modified credits apperance in the preferences panel (and remove the
     about menu from gnome applet popup menu)
   - Bugfix: socket was closed twice when lock was lost in IDLE state
   - Bugfix: modify the configure script to have errors if popt or fam
             libraries not present