@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: imap4.h,v $
-// Revision      : $Revision: 1.14 $
-// Revision date : $Date: 2004/12/31 16:08:52 $
+// Revision      : $Revision: 1.15 $
+// Revision date : $Date: 2004/12/31 17:10:42 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -36,7 +36,6 @@
 #include "socket.h"
 
 #define IMAP4(x)				((Imap4 *)(x))
-
 
 class Imap4 : public Mailbox {
 
@@ -79,9 +78,10 @@ public:
 	//	Internal stuff
 	// ========================================================================	
 	gboolean parse_bodystructure (std::string, class PartInfo &,
-									gboolean toplevel=true);
+								  gboolean toplevel=true);
 	gboolean parse_bodystructure_parameters (std::string, class PartInfo &);
 	void command_capability (void) throw (imap_err);
+	PartInfo command_fetchbodystructure (guint) throw (imap_err);
 	std::vector<std::string> command_fetchheader (guint) throw (imap_err);
 	std::vector<int> command_searchnotseen (void) throw (imap_err);
 	void command_waitforack (gint num=0) throw (imap_err);
