@@ -36,7 +36,8 @@ Version 2.1.1
         thanks to Byron Foster for providing a patch)
    - Bugfix: Corrected tests for responses to IDLE and SEARCH NOT SEEN
         commands (IMAP4)
-   - Cleanup of SEARCH NOT SEEN, CAPABILITY, FETCH header commands (IMAP4)
+   - Cleanup of SEARCH NOT SEEN, CAPABILITY, FETCH header, FETCH bodystructure
+        commands (IMAP4)
    - Bugfix: Segfaulting in SSL when writing to a closed socket
    - Cleanup of code for obtaining the password for distant mailboxes
    - Cleanup of code for checking for new mails (IMAP4)
